First commit for #57. Start by just making the buttons a little smaller on narrow views. This fixes it at present (though if we add more action buttons in the future, it will still need some vertical padding).

--- a/assets/sass/_media_queries.scss
+++ b/assets/sass/_media_queries.scss
@@ -278,6 +278,14 @@
                 margin-bottom: $fs5;
             }
         }
+
+        .share {
+            font-size: $fs6;
+
+            a[data-icon]:before {
+                font-size: 28px;
+            }
+        }
     }
 
     blockquote, blockquote p {
